changes in home page

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
     <div class="container">
         <div class="home-page-welcome-main-div">
             <div class="home-page-welcome-content">
-                <h3 class="home-page-welcome-name"><span>Scott Laidler</span></h3>
-                <h2 class="home-page-welcome-quote"><span> — I Take The Guesswork <br>Out of Health &amp; Fitness</span></h2>
+                <h1 class="home-page-welcome-name"><span>Scott Laidler</span></h1>
+                <h3 class="home-page-welcome-quote"><span> — I Take The Guesswork <br>Out of Health &amp; Fitness</span></h3>
             <div class="">
                 <p class="home-page-intro">Over the past 12 years as a personal trainer I have transformed the physiques of Oscar
                     winning actors, athletes, and military service personnel.</p>
                 <p class="home-page-work-with-you">As Your Online Personal Trainer, I will do the same for you</p>
-                <button type="button" class="btn btn-primary btn-lg home-page-welcome-learn-more">Learn More</button>
+                <button type="button" class="btn home-page-welcome-learn-more">Learn More</button>
             </div>
                 <!-- <div class="banner-content"> -->
                     <!-- <h2 class="heading h1">To find the best opportunities, <br>we <span>created</span> our own.
