changes in index page

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
   <div class="container">
     <h3>Getting started with personal training is simple</h3>
   <div class="home-page-steps">
-    <div class="home-page-step-one">
+    <div class="home-page-step home-page-step-one">
       <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">01</span>
       </div>
@@ -282,11 +282,11 @@
       </div>
 
   </div>
-        <div class="home-page-arrow-one">
+        <div class="home-page-arrow home-page-arrow-one">
         <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
             alt="">
     </div>
-    <div class="home-page-step-two">
+    <div class="home-page-step home-page-step-two">
       <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">02</span>
       </div>
@@ -298,11 +298,11 @@
       </div>
 
     </div>
-    <div class="home-page-arrow-two">
+    <div class="home-page-arrow home-page-arrow-two">
       <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
           alt="">
   </div>
-    <div class="home-page-step-three">
+    <div class="home-page-step home-page-step-three">
       <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">03</span>
       </div>
