moved css color to one place

--- a/404.html
+++ b/404.html
@@ -151,7 +151,7 @@
             <div class="four0four-content">
                 <h2>Oh Dear. Are you Lost?</h2>
                 <p>Come back in a little while or return to Homepage.</p>
-                <a href="/index.html">Return to Homepage</a>
+                <a href="/index.html" class="btn">Return to Homepage</a>
             </div>
 
 
