--- a/about.html
+++ b/about.html
@@ -33,7 +33,6 @@
     <!-- Custom CSS Link -->
 
     <link rel="stylesheet" href="/assets/css/header.css">
-
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
@@ -228,7 +227,7 @@
           <textarea class="form-field" id="your_goal" rows="3"></textarea>
         </div>
         <div class="form-submit-button">
-          <button type="submit" class="submitbtn">Submit</button>
+          <button type="submit" class="btn-type-2 submitbtn">Submit</button>
         </div>
       </form>
     </div>
