--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/assets/css/contact.css">
+    <!-- <link rel="stylesheet" href="/assets/css/contact.css"> -->
     
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
@@ -148,7 +148,7 @@
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
           <div class="form-submit-button">
-            <button type="submit" class="btn btn-primary">Submit Message</button>
+            <button type="submit" class="btn">Submit Message</button>
           </div>
         </form>
       </div>
@@ -156,10 +156,10 @@
         <h3>Contact</h3>
         <ul>
           <li>
-            <a href="mailto:support@abcfeg.com" class="mail"><i class="fa-solid fa-envelope"></i> support@abcfeg.com</a>
+            <a href="mailto:support@abcfeg.com" class=" anchor mail"><i class="fa-solid fa-envelope"></i> support@abcfeg.com</a>
           </li>
           <li>
-            <a href="tel:" class="number"><i class="fa-solid fa-phone"></i> +1234567890</a>
+            <a href="tel:" class="anchor number"><i class="fa-solid fa-phone"></i> +1234567890</a>
           </li>
           <li>
             <a href="#" class="link"><i class="fa-brands fa-whatsapp"></i> Message on Whatsapp</a>
