--- a/plans.html
+++ b/plans.html
@@ -196,7 +196,7 @@
                   <textarea class="form-field" id="your_goal" rows="3"></textarea>
                 </div>
                 <div class="form-submit-button">
-                  <button type="submit" class="submitbtn">Submit</button>
+                  <button type="submit" class="btn-type-2 submitbtn">Submit</button>
                 </div>
               </form>
             </div>
