--- a/faq.html
+++ b/faq.html
@@ -32,7 +32,7 @@
     <!-- Custom CSS Link -->
 
     <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/faq.css">
+    <!-- <link rel="stylesheet" href="/assets/css/faq.css"> -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
