trying critical css technique

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link rel="icon" href="assets/images/letter-s.png" />
 
     <!-- Base CSS -->
-    <link rel="stylesheet" href="/assets/css/base/base.css">
+    <!-- <link rel="stylesheet" href="/assets/css/base/base-minified.css"> -->
     <!-- <link rel="stylesheet" href="/assets/css/variables.css"> -->
     
     <!-- Custom CSS Link -->
 
     <!-- <link rel="stylesheet" href="/assets/css/header.css"> -->
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="assets/css/style-minified.css" type="text/css"> -->
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
       <!-- Font Awesome Link -->
@@ -38,7 +38,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css" integrity="sha512-ShLuspGzRsTiMlQ2Rg0e+atjy/gVQr3oYKnKmQkHQ6sxcnDAEOtOaPz2rRmeygV2CtnwUawDyHkGgH4zUbP3Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Scott Laider - Home Page</title>
+    <style>
+      .glide__arrow{background-color:var(--clr-secondary);color:#fff;border:1px solid #7e7e7e;border-radius:5px;padding:9px 9px 5px}.glide__arrow svg{width:1rem;height:1rem}.glide__arrow{position:relative}.glide__arrow{bottom:103%}.glide__arrow--left{position:absolute;left:90%}.glide__arrow--right{position:absolute;left:95%}@media (max-width:800px){.glide__arrow{display:none}}.glide *{box-sizing:inherit}*,::after,::before{box-sizing:border-box}*{margin:0;padding:0;font:inherit}html{color-scheme:dark light;font-family:var(--base-font),Calibre,poppins,Roboto,Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji';-moz-text-size-adjust:none;text-size-adjust:none;-webkit-text-size-adjust:100%;scroll-behavior:smooth}body{margin:0;-webkit-text-size-adjust:100%;font-size:1rem;line-height:1.5;min-height:100vh}ul{list-style:none;padding:0;margin:0}button,h1,h2,h3{line-height:1.15;margin:0;padding:0}h1{font-size:clamp(2.75rem,4.5vw,4rem);font-weight:600;margin-block:0.83em}h2{font-size:1.5rem;font-weight:500}h3{font-size:clamp(1.5rem,3vw,2.5rem);font-weight:500}p{font-size:1rem;padding-block:1em}h1{font-size:clamp(2.75rem,4.5vw,4rem)}h2{font-size:clamp(1.75rem,3.5vw,3rem);font-weight:500}h1,h2,h3{text-wrap:balance}img{max-width:100%;display:block}button{font:inherit}a{text-decoration:none}[type=button],button{-webkit-appearance:button}button{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button{text-transform:none}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}button{padding:0;border:none;background:0 0}header{background-color:var(--clr-secondary)}a.anchor{color:var(--clr-tertiary)}.btn{padding:.75em 1.5em;background-color:var(--clr-tertiary);color:var(--clr-surface);border:1px var(--clr-primary) solid;border-radius:.3em}:root{--clr-grey:#e9e9e9;--clr-text:hsl(204, 100%, 1%);--clr-surface:hsl(0,0%,100%);--clr-primary:#4498CE;--clr-secondary:#8BC9F1;--clr-tertiary:#43B3FD;--base-font:'IBM Plex Sans',sans-serif;--accent-font:'IBM Plex Sans Condensed',sans-serif;--font-size-300:clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);--font-size-400:clamp(1.35rem, 1.2761rem + 0.3696vi, 1.5625rem);--font-size-500:clamp(1.62rem, 1.5041rem + 0.5793vi, 1.9531rem);--font-size-600:clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);--font-size-700:clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);--font-size-800:clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem)}.navbar-nav li{padding:8px;margin:5px 10px}a.nav-link{font-weight:500}.header{position:sticky;top:0;left:0;width:100%;z-index:1}.header-logo img{vertical-align:middle;margin-block:8px}@media (max-width:1100px){a.nav-link{font-size:18px}.navbar-nav li{padding:8px;margin:5px}}@media (min-width:992px){.navbar-toggler{display:none}}@media (max-width:992px){.collapse:not(.show){display:none}li.nav-item:last-child{width:100%;text-align:center}}.navbar-toggler-icon{display:inline-block;width:2em;height:2em;vertical-align:middle;background-image:url('/assets/images/hamburger.svg');background-repeat:no-repeat;background-position:center;background-size:100%}.navbar .container-fluid{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:center}.navbar-nav{display:flex;justify-content:space-between;align-items:center}.navbar-collapse{display:flex;justify-content:space-between;align-items:center}.container-fluid.header-contact-info{display:flex;justify-content:space-between;padding-block:5px;border-bottom:1px solid #fff;font-size:15px}.header-phone>*{margin-inline:10px}li.nav-item:last-child{background-color:var(--clr-tertiary);border-radius:10px;padding-inline:10px}@media (max-width:992px){button#navbar-toggler{border:1px solid #000;padding:5px 9px}.navbar-nav{flex-direction:column;justify-content:flex-end;align-items:self-start;width:100%}.navbar-collapse{flex-grow:1;flex-basis:100%}ul.navbar-nav li:not(:last-child){border-bottom:1px solid #fff;width:100%}}@media (min-width:576px){.container{max-width:540px}}@media (min-width:768px){.container{max-width:720px}}@media (min-width:992px){.container{max-width:960px}}@media (min-width:1200px){.container{max-width:1140px}}.container,.container-fluid{--bs-gutter-x:1.5rem;--bs-gutter-y:0;width:100%;padding-right:calc(var(--bs-gutter-x) * .5);padding-left:calc(var(--bs-gutter-x) * .5);margin-right:auto;margin-left:auto}.home-page-welcome-image img{text-align:center;max-width:100%}.home-page-welcome-name{margin-block:0.5rem;font-size:8rem;font-weight:500}.home-page-welcome-quote{margin-top:10px;margin-bottom:44px}.home-page-welcome-learn-more{text-transform:uppercase}p.home-page-intro{width:min(96vw,30rem)}p.home-page-work-with-you{text-transform:uppercase}.home-page-welcome-main-div{display:flex;align-items:flex-start}.home-page-welcome-main-div>*{flex-basis:0%;flex-grow:1}@media (max-width:800px){.container-fluid.header-contact-info{display:none}.home-page-welcome-main-div{flex-direction:column}.home-page-welcome-name{font-size:65px}.home-page-welcome-image{display:none}}h2.home-page-about-heading{font-size:40px;padding-bottom:40px}::marker{color:var(--clr-primary)}.home-page-about-main-div{display:flex}.home-page-about-main-div>*{flex:1}.home-page-about-image img{max-width:100%}@media (max-width:800px){.home-page-about-main-div{flex-direction:column;align-items:center}}section:first-of-type{padding-bottom:40px}section+section{padding-block:50px}section:nth-child(even){background-color:#f2f2f2}.faq-row div{flex-basis:100%}.single-accordion-body{padding:16px 20px}.accordion-collapse{display:none}a.backToTopBtn{display:none;position:fixed;bottom:140px;right:20px;background-color:var(--clr-tertiary);color:#fff;border:none;border-radius:50%;padding:10px;width:50px;height:50px;text-align:center}html{scroll-behavior:smooth}#navbar .navbar-nav .nav-link{color:#fff}svg.svg-inline--fa.fa-phone,svg.svg-inline--fa.fa-whatsapp{width:15px;height:15px}
+    
+    </style>
 </head>
+
 <body>
     <header class="header">
       <div class="container-fluid header-contact-info">
@@ -247,7 +252,7 @@
                 </div>
             </div>
             <div class="home-page-why-us-image">
-                <img src="/assets/images/pexels-jane-trang-doan-1092730.jpg"
+                <img src="/assets/images/pexels-jane-trang-doan-1092730.webp"
                     alt="">
             </div>
         </div>
