changes in coloring css

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <link rel="icon" href="assets/images/letter-s.png" />
 
     <!-- Base CSS -->
-    <link rel="stylesheet" href="/assets/css/base/base-minified.css">
-    <!-- <link rel="stylesheet" href="/assets/css/base/base.css"> -->
+    <!-- <link rel="stylesheet" href="/assets/css/base/base-minified.css"> -->
+    <link rel="stylesheet" href="/assets/css/base/base.css">
     <!-- <link rel="stylesheet" href="/assets/css/variables.css"> -->
     
     <!-- Custom CSS Link -->
 
     <!-- <link rel="stylesheet" href="/assets/css/header.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/style.css" type="text/css"> -->
-    <link rel="stylesheet" href="assets/css/style-minified.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="assets/css/style-minified.css" type="text/css"> -->
     <!-- <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/> -->
 
       <!-- Font Awesome Link -->
