--- a/test.html
+++ b/test.html
@@ -104,7 +104,10 @@
     <h6>this is h6 heading</h6>
     <p>this is a paragraph</p>
     <a href="">this is an anchor</a>
+    <a href="" class="anchor">this is an anchor with anchor class</a>
+    <a href="" class="btn">this is an anchor with btn class</a>
     <button>this is a button</button>
+    <button class="btn">this is a button with btn class</button>
     <ul><li>this is a li in unorder list</li></ul>
     <ol><li>this is li in order list</li></ol>
     <section>
