--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a class="nav-link" href="/contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/get-started.html">Get Started</a>
+                    <a class="" href="/get-started.html">Get Started</a>
                 </li>
             </ul>
         </div>
