changes in mobile nav

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <button id="navbar-toggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon" id="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon hamburger" id="navbar-toggler-icon"></span>
           </button>
 
         <div class="b collapse navbar-collapse" id="navbar-collapse">
@@ -274,7 +274,7 @@
 
   </div>
         <div class="home-page-arrow home-page-arrow-one">
-        <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
+        <img src="/assets/images/down-arrow-45.svg"
             alt="">
     </div>
     <div class="home-page-step home-page-step-two">
@@ -290,7 +290,7 @@
 
     </div>
     <div class="home-page-arrow home-page-arrow-two">
-      <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
+      <img src="/assets/images/down-arrow-45.svg"
           alt="">
   </div>
     <div class="home-page-step home-page-step-three">
