--- a/transformations.html
+++ b/transformations.html
@@ -98,85 +98,150 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea iste quas quisquam beatae maiores dolore itaque numquam, aperiam iure nisi! Velit voluptatum repellendus neque mollitia ipsum quod natus minima sit!</p>
             <div class="gallery">
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
                 <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
+                    <div class="client-detail">
+                        <h4 class="client-name">Amit</h4>
+                        <p class="client-age">Age: 40s</p>
+                        <p class="client-improvement">17kg in 20Weeks</p>
+                      </div>
+                      <div class="card-body">
+                        <img
+                          src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
+                          class="card-img-top" alt="...">
+                      </div>
                 </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
-                <div class="gallery-image">
-                    <img src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
-                        alt="">
-                </div>
+               
             </div>
         </div>
     </section>
