--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
           </button>
 
         <div class="b collapse navbar-collapse" id="navbar-collapse">
+          <a class="mobile-header-logo" href="#">
+            <span>Scott Laidler</span>
+          </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -695,7 +698,7 @@
             </div>
             <div class="copyright-section row">
                 <div class="copyright">
-                    <p><small>© 2024 Scott Laidler All Right Reserved. | <a class="anchor" href="privacy-policy.html">Privacy Policy</a> | <a class="anchor" href="terms-and-conditions.html">Terms and Conditions</a></small></p>
+                    <p><small>© 2024 Scott Laidler All Right Reserved. </small><small><a class="anchor" href="privacy-policy.html">Privacy Policy</a> | <a class="anchor" href="terms-and-conditions.html">Terms and Conditions</a></small></p>
                 </div>
                 <div class="disclaimer">
                   <small>*DISCLAIMER: Results may vary. Results are based on individual circumstances. Timeframes for results are not guaranteed. Willpower is always required!</small>
