--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <!-- </div> -->
             </div>
             <div class="home-page-welcome-image">
-                <img src="/assets/images/welcome-image.webp" alt="" class="">
+                <img src="/assets/images/welcome-image-cropped.webp" alt="" class="">
                 <!-- <div class="hero-slider">
                     <div class="item">
                         <img src="assets/images/hero-img.png" alt="Hero Image">
@@ -135,43 +135,6 @@
             </div>
         </div>
     </div>
-</section>
-
-<!-- About Section -->
-
-<section class="home-page-about-section">
-  <div class="container">
-    <div class="home-page-about-main-div">
-      <div class="home-page-about-image">
-        <img
-          src="/assets/images/about.webp"
-          alt="">
-      </div>
-      <div class="home-page-about-content">
-        <h2 class="home-page-about-heading">Hi, I'm Scott Laidler</h2>
-        <div>
-          <p class="home-page-about-para-1">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
-            social events.</p>
-          <p class="home-page-about-para-2">Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess
-            weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and
-            motivation you need. We'll work with realistic methods, which means you'll get results you can maintain
-            forever. Real advice. Real results.</p>
-          <p class="home-page-about-para-3">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
-            social events.</p>
-          <p class="home-page-about-para-4">You get:</p>
-          <ol class="home-page-about-benefit">
-            <li>&nbsp;Results! Build muscle, get stronger, lose weight, tone up and live a healthy lifestyle</li>
-            <li>&nbsp;Personalised workouts with weekly adjustments</li>
-            <li>&nbsp;Personalised nutrition guidance</li>
-            <li>&nbsp;Weekly check-in call with me</li>
-            <li>&nbsp;Weekly goals, that ensure progress every week</li>
-            <li>&nbsp;Tracking of your progress</li>
-            <li>&nbsp;24/7 contact with me</li>
-          </ol>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
 <!-- Our Programs -->
@@ -207,6 +170,48 @@
   </div>
 </section>
 <!-- Our Programs -->
+
+<!-- About Section -->
+
+<section class="home-page-about-section">
+  <div class="container">
+    <h1 class="services-heading">
+      About Scott Laidler
+    </h1>
+    <div class="home-page-about-main-div">
+      <div class="home-page-about-image">
+        <img
+          src="/assets/images/about.webp"
+          alt="">
+      </div>
+      <div class="home-page-about-content">
+        <h2 class="home-page-about-heading">Hi, I'm Scott Laidler</h2>
+        <div>
+          <p class="home-page-about-para-1">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
+            social events.</p>
+          <p class="home-page-about-para-2">Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess
+            weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and
+            motivation you need. We'll work with realistic methods, which means you'll get results you can maintain
+            forever. Real advice. Real results.</p>
+          <p class="home-page-about-para-3">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
+            social events.</p>
+          <p class="home-page-about-para-4">You get:</p>
+          <ol class="home-page-about-benefit">
+            <li>&nbsp;Results! Build muscle, get stronger, lose weight, tone up and live a healthy lifestyle</li>
+            <li>&nbsp;Personalised workouts with weekly adjustments</li>
+            <li>&nbsp;Personalised nutrition guidance</li>
+            <li>&nbsp;Weekly check-in call with me</li>
+            <li>&nbsp;Weekly goals, that ensure progress every week</li>
+            <li>&nbsp;Tracking of your progress</li>
+            <li>&nbsp;24/7 contact with me</li>
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 <!-- Why Us Section -->
 
@@ -312,6 +317,63 @@
 <!-- Steps Section -->
 
 <!-- How can I help Section  -->
+<!-- <section class="home-page-how-can-i-help-section">
+  <div class="container">
+    <h2 class="home-page-how-can-i-help-heading">How I can Help</h2>
+    <div>
+      <div class="home-page-how-can-i-help-main-div">
+        <div class="home-page-how-can-i-help-card ">
+          <div class="card-body">
+            <img src="assets/images/weight-loss.png" class="home-page-how-can-i-help-card-img" alt="...">
+            <div class="card-content">
+              <h4 class="card-title">Weight Loss</h4>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="home-page-how-can-i-help-card">
+          <div class="card-body">
+            <img src="assets/images/woman.png" class="home-page-how-can-i-help-card-img" alt="...">
+            <div class="card-content">
+              <h4 class="card-title">PCOs</h4>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit sdsdasdsad.</p>
+            </div>
+          </div>
+        </div>
+        <div class="home-page-how-can-i-help-card">
+          <div class="card-body">
+            <img src="assets/images/insuline.png" class="home-page-how-can-i-help-card-img" alt="...">
+            <div class="card-content">
+              <h4 class="card-title">Insulin Resistance</h4>
+              <p class="card-text">This is a longer card with su a longer card with supporting text below as a natural
+                lead-in to additional
+                content. This content is a little bit text below as a natural lead-in
+                to additional
+                content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="home-page-how-can-i-help-card">
+          <div class="card-body">
+            <img src="assets/images/digestive.png" class="home-page-how-can-i-help-card-img" alt="...">
+            <div class="card-content">
+              <h4 class="card-title">Gut Health</h4>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a  bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<!-- How can I help Section  -->
+
+
+<!-- How can I help Section  -->
 <section class="home-page-how-can-i-help-section">
   <div class="container">
     <h2 class="home-page-how-can-i-help-heading">How I can Help</h2>
@@ -366,6 +428,7 @@
 </section>
 
 <!-- How can I help Section  -->
+
 
 <!-- Key Figure Section -->
 
