added tasks in readme

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -108,6 +108,7 @@
                     Any exercise program, even in healthy individuals, carries risk. You have a responsibility to
                     exercise your own personal judgment, as well as any other considerations, before acting on any of
                     the content provided by us.</p>
+                    <p>By accessing or using the Website, you agree to be bound by this Disclaimer. If you disagree with any part of this Disclaimer, then you do not have our permission to access or use the Website.</p>
 
 
 
@@ -163,6 +164,25 @@
                     the results that you are likely to achieve, rather they are included as examples of the results that
                     particular individuals have achieved.</p>
                 <p></p>
+
+                Health and Fitness Advice
+This Website offers health and fitness advice. This advice is designed for educational purposes only and is not intended to replace the advice, treatment, or diagnosis of a healthcare professional.
+
+You should always consult with a healthcare professional before starting any fitness program, diet, or any other change in your healthcare routine.
+
+If you experience dizziness, faintness, shortness of breath or pain while exercising, stop immediately, and consult with a healthcare professional.
+
+Anna Quinn Fitness is not a licensed medical provider.
+
+You agree that you assume all responsibility when choosing to act on any of the health or fitness advice contained on this Website.
+
+Changes
+We reserve the right to amend this policy at any time without any prior notice to you.
+
+Questions
+If you have any questions about this Disclaimer, please contact us at info@modestmusclemvmt.com.
+
+
             </div>
         </section>
     </main>
